fix(components/molecule/progressSteps): justify bar alignment prop and fix compressed current tab vi
BREAKING CHANGES:

fix compressed current tab highlight

ISSUES CLOSED: 1405

--- a/components/molecule/progressSteps/src/index.scss
+++ b/components/molecule/progressSteps/src/index.scss
@@ -4,7 +4,8 @@ $c-progress-steps-bar: $c-gray-light !default;
 $c-progress-steps-label: $c-gray-dark-2 !default;
 $c-progress-steps-icon: $c-gray-light !default;
 
-$c-progress-steps-active: $c-primary !default;
+$c-progress-steps-active: $c-primary-light-1 !default;
+$c-progress-steps-visited: $c-primary !default;
 
 $fz-progress-steps-description: inherit !default;
 
@@ -15,29 +16,23 @@ $h-progress-steps-bar: $bdw-progress-steps-bar * 2 !default;
 $mw-progress-steps-path: 100% !default;
 $w-progress-steps-description: 100px !default;
 
-$justify-content-bar: (
-  'center',
-  'start',
-  'end',
-  'flex-start',
-  'flex-end',
-  'left',
-  'right',
-  'normal',
-  'space-between',
-  'space-around',
-  'space-evenly',
-  'stretch'
-);
+$sz-progress-steps-icon: $sz-icon-xl !default;
+$sz-progress-steps-bar: 6 * $sz-base !default;
+$m-progress-steps-icon: $m-s !default;
+
+@function contains($list, $item) {
+  @return index($list, $item) != null;
+}
+
+$justify-content-path: (legacy, center, flex-start, flex-end);
 
 $base-class: '.sui-MoleculeProgressSteps';
 
-.sui-MoleculeProgressSteps {
+#{$base-class} {
   &-path {
     align-items: center;
     display: flex;
     max-width: $mw-progress-steps-path;
-    justify-content: space-evenly;
 
     &-bar {
       background: $c-progress-steps-bar;
@@ -46,18 +41,27 @@ $base-class: '.sui-MoleculeProgressSteps';
       border-style: solid;
       border-width: $bdw-progress-steps-bar;
       height: $h-progress-steps-bar;
-      min-width: 20px;
+      margin: 0;
+      flex-shrink: 1;
 
       &--visited {
-        background: $c-progress-steps-active;
-        border-color: $c-progress-steps-active;
+        background: $c-progress-steps-visited;
+        border-color: $c-progress-steps-visited;
       }
-      &--grow {
-        flex-grow: 1;
-      }
-      @each $justifyContent in $justify-content-bar {
-        &--justifyContent-#{$justifyContent} {
+    }
+    @each $justifyContent in $justify-content-path {
+      &--justifyContent-#{$justifyContent} {
+        @if $justifyContent != 'legacy' {
           justify-content: $justifyContent;
+        }
+        #{$base-class}-path-bar {
+          flex-basis: $sz-progress-steps-bar;
+          flex-shrink: 0;
+          @if contains((legacy), $justifyContent) {
+            flex-grow: 1;
+          } @else {
+            flex-grow: 0;
+          }
         }
       }
     }
@@ -68,6 +72,8 @@ $base-class: '.sui-MoleculeProgressSteps';
       display: flex;
       flex-direction: column;
       position: relative;
+      flex-basis: $sz-progress-steps-icon;
+      flex-shrink: 0;
 
       svg,
       use {
@@ -76,11 +82,11 @@ $base-class: '.sui-MoleculeProgressSteps';
 
       &--active,
       &--visited {
-        color: $c-progress-steps-active;
+        color: $c-progress-steps-visited;
 
         svg,
         use {
-          fill: $c-progress-steps-active;
+          fill: $c-progress-steps-visited;
         }
       }
 
@@ -88,11 +94,11 @@ $base-class: '.sui-MoleculeProgressSteps';
       &-icon {
         align-items: center;
         display: flex;
-        height: 40px;
-        margin: 5px;
+        height: $sz-progress-steps-icon;
+        margin: $m-progress-steps-icon;
         padding: 0;
-        width: 40px;
-
+        width: $sz-progress-steps-icon;
+        flex-basis: $sz-progress-steps-icon;
         svg {
           width: 100%;
         }
@@ -121,6 +127,14 @@ $base-class: '.sui-MoleculeProgressSteps';
   &--compressed {
     #{$base-class}-compressedInfo {
       margin: 0;
+      display: flex;
+      @each $justifyContent in $justify-content-path {
+        &--justifyContent-#{$justifyContent} {
+          @if $justifyContent != 'legacy' {
+            justify-content: $justifyContent;
+          }
+        }
+      }
     }
 
     #{$base-class}-path {
@@ -129,6 +143,11 @@ $base-class: '.sui-MoleculeProgressSteps';
 
         &:last-child {
           margin-right: 0;
+        }
+
+        &--active {
+          background: $c-progress-steps-active;
+          border-color: $c-progress-steps-active;
         }
       }
 
@@ -149,7 +168,6 @@ $base-class: '.sui-MoleculeProgressSteps';
 
     #{$base-class}-path {
       flex-direction: column;
-      justify-content: space-between;
       margin-right: 100px;
 
       &-step {
@@ -165,7 +183,6 @@ $base-class: '.sui-MoleculeProgressSteps';
       }
 
       &-bar {
-        min-height: 30px;
         transform: translateY(0);
         width: $h-progress-steps-bar;
         border-width: $bdw-progress-steps-bar;
